--- a/frontend/css/products-js.css
+++ b/frontend/css/products-js.css
@@ -195,7 +195,7 @@ header input:focus {
     justify-content: space-between;
     align-items: center;
 
-    background-color: #00BBF9;
+    background-color: #005E7D;
     border-radius: 7px;
     color: white;
     margin: 1rem 0 1.5rem;
