--- a/frontend/css/search_overlay.css
+++ b/frontend/css/search_overlay.css
@@ -10,12 +10,15 @@ body{
 }
 .so-main{
     background-color: #1E1E1E;
-    padding: 3% 7%;
+    padding: 3% 5%;
+    justify-content: center;
+    max-width: 100vw;
 }
 .so-top{
     width: 80%;
     position: relative;
     left: 25%;
+    margin-bottom: 3rem;
 }
 .so-search{
     color: #D9D9D9;
@@ -37,32 +40,28 @@ body{
     cursor: pointer;
     width: 2.5rem;
     position: absolute;
-    right: 0;
+    right: 3rem;
 }
 .so-codesample-row{
-    display: flex;
-    margin: 3rem 0;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 1rem;
 }
 .so-codesamples{
     background-color: #D9D9D9;
     border-radius: 10px;
     padding: 2rem;
     text-align: center;
-    width: 50%;
-}
-.so-codesamples p{
-    margin-top: 1.5rem;
-    font-size: 1.5rem;
-    line-height: 1.5;
-}
-.so-codesamples-right{
-    margin-left: 3rem;
+    
 }
 .so-code-react{
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 2rem;
+}
+.so-like{
+    margin-left: 6px;
 }
 .so-code-react ul{
     list-style: none;
@@ -75,15 +74,20 @@ body{
 .so-code-react a:hover{
     transform: scale(1.1);
 }
-@media screen and (max-width: 1020px){
+@media screen and (max-width: 1200px){
+    .so-main{
+        padding: 5% 8%;
+    }
     .so-codesample-row{
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-gap: 1rem;
     }
-    .so-codesamples{
-        width: 100%;
-    }
-    .so-codesamples-right{
-        margin: 2rem auto 0;
-    }
+}
+@media screen and (max-width:700px){
+   .so-codesample-row{
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 1.5rem;
+   }
 }
