--- a/frontend/css/signup.css
+++ b/frontend/css/signup.css
@@ -1,181 +1,9 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    font-family: Open Sans;
-    background-color: lightgrey;
-}
-a{
+.sp-a{
     text-decoration: none;
 }
-/* header {
-    align-items: center;
-    border-bottom: 1px solid gray;
-    padding: 1.25rem 0;
-} */
 
-/* header,
-.desktop_nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-} */
-
-/* header .company-logo {
-    font-size: 1.25rem;
-    letter-spacing: .05rem;
-    /* min-width: 7.25rem;
-    text-align: left;
-} */
-
-/* header a,
-header button {
-    border: none;
-    /* background-color: #557E8C; 
-    color: black;        
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;  
-    font-weight: 600;  
-
-    height: 2rem;
-    padding: 0 1rem;
-    text-align: center;
-    text-decoration: none;
-} */
-
-/* header a:hover {
-    border-radius: 0;
-    border-bottom: 2px solid #003E53;
-}
-
-
-header .signup-btn {
-    background-color: #00BBF9;
-    border: none;
-    color: white;    
-}
-
-header button:hover {
-    background-color: #003E53;
-}
-
-header input {
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 0 .5rem;
-}
-
-header input:focus {
-    outline: none;
-}
-
-.mob_search-bar {
-    display: flex;
-    align-items: center;
-    position: relative;    
-    width: 50%;
-}
-
-.search-icon {
-    font-size: .8rem;
-    position: absolute;
-    top: 55%;
-    transform: translateY(-50%);
-    left: .5rem;    
-}
-
-.mob_search-bar input {
-    width: 100%;
-    height: 1.75rem;
-    padding: 0 1.75rem;   
-}
-
-.company-logo {
-    color: #00BBF9;    
-    font-size: 1.75rem;
-    font-weight: 600;
-    letter-spacing: .2rem;
-}
-
-.desktop_nav {
-    display: none;
-}
-
-.mobile_nav {
-    display: flex;
-}
-
-.nav_card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
-    background-color: #003E53;
-    border-radius: 10px;
-    height: 60vh;
-    padding: 2rem 1.5rem;
-    width: 80vw;
-
-    position: absolute;
-    top: 4.5rem;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: .7s ease-out;
-    z-index: 3;
-}
-
-.nav_card a,
-.nav_card button {
-    background-color: transparent;
-    color: white;
-}
-
-.nav_card.hide {
-    left: -100vw;
-}
-
-.menu_btn {
-    cursor: pointer;
-    font-size: 1.25rem;
-}
-
-.menu_btn:hover {
-    color: #003E53;
-} */
-
-/* header{
-    display: flex;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    box-shadow: 0px 15px 3px -15px #111; 
-    border-radius: 3px; 
-    background: white;  
-
-}
-.header-logo{
-    margin-left: 1.5em;
-    font-weight: 200;
-}
-header nav{
-    margin-left: 25em;
-    padding: 0.5em;
-}
-
-.nav-btn{
-    font-size: 16px;
-    text-decoration: none;
-    background: gray;
-    color: #000000;
-    padding: 5px 10px;
-    margin: 10px 5px;
-    border-radius: 3px;
-} */
 .sp-body{
-    margin: 3em 15em;
+    margin: auto;
     padding: 3em 2em;
     background-color: white;
     height: 25em;
@@ -193,23 +21,18 @@ header nav{
     color: gray;
 
 }
-input{
+.sp-input{
     width: 20em;
     height: 2em;
     margin-left: 1em;
 }
-#terms-para a{
+#sp-terms-para a{
     color: black;
 }
-/* .sp-continue{
-    text-align: center;
-} */
 .sp-contBtn{
     margin-top: 7em;
     margin-left: 1em;
     background-color: gray;
-    /* text-align: center; */
-    /* height: 2em; */
     width: 20em;
     padding: 0.5em 0;
     border-radius: 5px;
@@ -219,7 +42,7 @@ input{
     color: white;
 
 }
-.hr{
+.sp-hr{
     margin-top: 2.5em;
     width: 22em;
 }
